src/Tests/Error/ClassHasNotStaticAttributeError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class ClassHasNotStaticAttributeError extends AssertError
{
}
